--- a/django/zomato_chronicles/templates/base.html
+++ b/django/zomato_chronicles/templates/base.html
@@ -21,10 +21,10 @@
           <a class="nav-link active" aria-current="page" href="/">Home</a>
         </li>
         <li class="nav-item">
-          <a class="nav-link" href="#">Link</a>
+          <a class="nav-link" href="/add_dish">Create</a>
         </li>
         <li class="nav-item">
-          <a class="nav-link disabled" aria-disabled="true">Disabled</a>
+          <a class="nav-link" href="/orders">Orders</a>
         </li>
       </ul>
       <form class="d-flex" role="search">
