--- a/django/zomato_chronicles/templates/home.html
+++ b/django/zomato_chronicles/templates/home.html
@@ -13,7 +13,7 @@
             <div class="card-header">${{ dish.price }}</div>
             <div class="card-body">
               <h5 class="card-title">{{ dish.name }}</h5>
-              <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
+              <p class="card-text">{{dish.description}}</p>
            <div class="d-flex justify-content-between ">
                 <form method="post">
                   {% csrf_token %}
