--- a/django/zomato_chronicles/templates/update.html
+++ b/django/zomato_chronicles/templates/update.html
@@ -22,6 +22,11 @@
           <input type="checkbox" class="form-check-input" id="available" name="available" {% if dish.available %}checked{% endif %}>
           <label class="form-check-label" for="available">Available</label>
         </div>
+        <div class="mb-3">
+          <label for="description" class="form-label">Description</label>
+          <textarea class="form-control" id="description" name="description" rows="3" placeholder="Enter short description">{{ dish.description }}
+          </textarea>
+        </div>
         <button type="submit" class="btn btn-dark">Update</button>
       </form>
     </div>
