--- a/django/zomato_chronicles/templates/home.html
+++ b/django/zomato_chronicles/templates/home.html
@@ -6,6 +6,7 @@
 
 {% block content %}
   <div class="container mt-4 border p-4 bg-gray-10" style="background-color: #f8f9fa;">
+    <h2 class="mb-4 fw-bolder">Menu 🍔</h2>
     <div class="row">
       {% for dish in menu %}
         <div class="col-md-3 col-lg-3">
