--- a/django/zomato_chronicles/templates/orders.html
+++ b/django/zomato_chronicles/templates/orders.html
@@ -6,7 +6,7 @@
 
 {% block content %}
   <div class="container mt-4 border p-4 bg-gray-10 font-monospace"  style="background-color: #f8f9fa; ">
-    <h2 class="mb-4 fw-bolder">Orders 🚚</h2>
+    <h2 class="mb-4 fw-bolder">Orders </h2>
     <div class="table-responsive">
       <table class="table table-striped table-bordered">
         <thead class="table-dark">
