--- a/django/zomato_chronicles/templates/base.html
+++ b/django/zomato_chronicles/templates/base.html
@@ -27,7 +27,7 @@
               <a class="nav-link" href="/orders">Orders</a>
             </li>
           </ul>
-          <form class="d-flex" role="search">
+          <form class="d-flex" role="search" action="{% url 'search_dish' %}" method="get">
             <input class="form-control me-2" type="search" placeholder="Search" aria-label="Search" name="search" />
             <button class="btn btn-outline-success" type="submit">Search</button>
           </form>
