--- a/django/zomato_chronicles/templates/home.html
+++ b/django/zomato_chronicles/templates/home.html
@@ -7,7 +7,8 @@
 {% block content %}
   <div class="container mt-4 border p-4 bg-gray-10" style="background-color: #f8f9fa;">
     <h2 class="mb-4 fw-bolder">Menu 🍔</h2>
-    <div class="row">
+     {% if query %}Search results for <strong class="mb-2">{{query}}</strong>{% endif %}
+    <div class="row my-2">
       {% for dish in menu %}
         <div class="col-md-3 col-lg-3">
           <div class="card text-bg-light mb-3" style="max-width: 18rem;">
