--- a/django/zomato_chronicles/templates/place_order.html
+++ b/django/zomato_chronicles/templates/place_order.html
@@ -17,6 +17,7 @@
         <div class="mb-3">
           <label class="form-label">Select Dishes</label>
           {% for dish in menu %}
+            {% if dish.available %}
             <div class="form-check">
               <input class="form-check-input" type="checkbox" value="{{ dish.id }}" id="dish_{{ dish.id }}" name="selected_dishes[]" {% if dish.id == current_id %}checked{% endif %}/>
               <label class="form-check-label" for="dish_{{ dish.id }}">
@@ -24,6 +25,7 @@
                 {{ dish.name }}</strong>
               </label>
             </div>
+            {% endif %}
           {% endfor %}
         </div>
         <button type="submit" class="btn btn-dark w-100   ">Place Order</button>
