--- a/django/zomato_chronicles/templates/place_order.html
+++ b/django/zomato_chronicles/templates/place_order.html
@@ -7,7 +7,7 @@
 {% block content %}
   <div class="container mt-4 border p-4 bg-gray-10 font-monospace d-flex  align-items-center flex-column " style="background-color: #f8f9fa; ">
     <h2 class="mb-4 fw-bolder">Place an Order 🚚</h2>
-    <div class="bg-white p-4 border w-25">
+    <div class="bg-white p-4 border w-25" style="min-width: 300px;">
       <form method="post">
         {% csrf_token %}
         <div class="mb-3">
