--- a/django/zomato_chronicles/templates/add_dish.html
+++ b/django/zomato_chronicles/templates/add_dish.html
@@ -7,7 +7,7 @@
 {% block content %}
   <div class="container-sm mt-4 bg-light p-lg-5 d-flex align-items-center flex-column font-monospace " style="background-color: #f8f9fa; ">
     <h2 class="mb-4 fw-bolder">Add Dish</h2>
-    <div class="bg-white w-25 p-4 border">
+    <div class="bg-white w-25 p-4 border " style="min-width: 300px;">
       <form method="post">
         {% csrf_token %}
         <div class="mb-3">
